# Investment-News-Analysis-AI

./: .gitignore  .pre-commit-config.yaml  README.md  reports.html  site.webmanifest
.github/workflows/: deploy-client.yml  deploy-terraform.yml
client/: index.html  reports.html
lambda/: Dockerfile  agent.py  pyproject.toml
lambda/prompts/: market_analyst.j2  query_generation.j2  system.j2
scripts/: bump_calver.py  run_local.py  run_local.sh  run_local_client.sh  run_local_lambda.sh  run_local_server.sh
server/: main.py  pyproject.toml
terraform/: backend.tf  main.tf  outputs.tf  variables.tf
terraform/bootstrap/: main.tf
