[project]
name = "ina-lambda"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35,<1.36",
    "langchain>=0.3,<0.4",
    "langchain-openai>=0.2,<0.3",
    "langchain-community>=0.3,<0.4",
    "langgraph>=0.2,<0.3",
    "tavily-python>=0.5,<0.6",
    "weasyprint>=62,<63",
    "markdown>=3.7,<3.8",
]
